# MotionPictureDb

./: pyproject.toml
Project 1.1/app/routes/: actors.py  movies.py
Project 1.2/app/routes/: movies.py  queries.py
Project 1.2/data/: data2.sql
app/routes/: actors.py
data/: creation.sql  data.sql
